--- a/static/jade/section/artist-profile.jade
+++ b/static/jade/section/artist-profile.jade
@@ -2,62 +2,62 @@
   h3.subtitle.text-center GET THEIR FAVORITE STUFFS!
 
   .artis-item
-    img(src="../img/artis/giring.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/giring.png")
     h5 Giring Nidji
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/raisa.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/raisa.png")
     h5 Raisa
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/tulus.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/tulus.png")
     h5 Tulus
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/eva-celia.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/eva-celia.png")
     h5 Eva Celia
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/lala-karmela.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/lala-karmela.png")
     h5 Lala Karmela
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/ello.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/ello.png")
     h5 Ello
     span Penyanyi
 
 
   .artis-item
-    img(src="../img/artis/ayushita.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/ayushita.png")
     h5 ayushita
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/maliq.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/maliq.png")
     h5 MALIQ & D’ESSENTIALS
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/endha-rhesa.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/endha-rhesa.png")
     h5 Endah N Resha
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/saykoji.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/saykoji.png")
     h5 Saykoji
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/teddy-adithya.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/teddy-adithya.png")
     h5 Teddy Adithya
     span Penyanyi
 
   .artis-item
-    img(src="../img/artis/hive.png")
+    img(src="https://shopee1212.herokuapp.com/img/artis/hive.png")
     h5 Midnight Quickie
     span Penyanyi
