--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -6,36 +6,49 @@
       .cd-timeline-block
         .get-your-best-deal
         .cd-timeline-content.selebriti-comment
-          img(src="../img/timeline/timeline-1.png")
+          img.md-trigger(src="https://shopee1212.herokuapp.com/img/timeline/timeline-1.png", data-modal="modal-1")
 
       .cd-timeline-block
         .cd-timeline-content.follow-comment
-          img(src="../img/timeline/timeline-2.png");
+          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-2.png");
 
       .cd-timeline-block
         .cd-timeline-content.daily-checkin
-          img(src="../img/timeline/timeline-3.png");
+          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-3.png");
 
       .cd-timeline-block
         .cd-timeline-content.pyramid-discount
-          img(src="../img/timeline/timeline-4.png");
+          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-4.png");
 
       .cd-timeline-block
         .cd-timeline-content.road-to
-          img(src="../img/timeline/timeline-5.png");
+          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-5.png");
 
       .cd-timeline-block
         .cd-timeline-content.lelang-barang-artis
-          img(src="../img/timeline/timeline-6.png");
+          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-6.png");
 
       .cd-timeline-block
         .cd-timeline-content.the-big-day
-          img(src="../img/timeline/timeline-7.png");
+          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-7.png");
 
       .cd-timeline-block
         .cd-timeline-content.top-speder-competition
-          img(src="../img/timeline/timeline-8.png");
+          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-8.png");
 
       .cd-timeline-block
         .cd-timeline-content.showoff1212
-          img(src="../img/timeline/timeline-9.png");
+          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-9.png");
+
+    #modal-1.md-modal.md-effect-1
+      .md-content
+        h3 Celebrity 12.12 Comment
+        div
+          p Caranya:
+          ul
+            li a. Cek daftar penjual selebriti yang berpartisipasi.
+            li b.Setiap harinya penjual selebriti akan menampilkan 1 buah gambar melalui toko mereka dengan topik pertanyaan: "Apa arti belanja online bagi kamu?"
+            li c. Berikan jawaban sekreatif mungkin pada kolom komentar.
+            li d. Shopee akan mengumumkan 1 pemenang dari setiap toko selebriti pada tgl 12 Desember 2015.
+            li e. Tiap pemenang berhak mendapatkan hadiah kejutan yang akan diinformasikan melalui fitur chat di Shopee, langsung oleh penjual selebriti yang berpartisipasi.
+          button.md-close Close!
