banner path to relative path

--- a/static/jade/section/banner.jade
+++ b/static/jade/section/banner.jade
@@ -2,4 +2,4 @@
   .flexslider
     ul.slides
       li
-        img(src='/img/shopee-1212-banner.jpg')
+        img(src='https://shopee1212.herokuapp.com/img/shopee-1212-banner.jpg')
