changes path and fixing

--- a/static/jade/index.jade
+++ b/static/jade/index.jade
@@ -16,7 +16,7 @@ block main
 
     //- include section/deals
 
-    include section/shipping
+    //- include section/shipping
 
     include section/share-and-win
 
