--- a/static/jade/section/deals.jade
+++ b/static/jade/section/deals.jade
@@ -3,36 +3,36 @@
 
     .content
       .col-sm-6.col-xs-12.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/stunning-fashion.jpg")
+        img(src="/1212/img/deals/stunning-fashion.jpg")
       .col-sm-6.col-xs-12.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/coolest-gadget.jpg")
+        img(src="/1212/img/deals/coolest-gadget.jpg")
       .clearfix
 
     .content
       .col-sm-3.col-xs-6.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/gorgeous-bag-shoes.jpg")
+        img(src="/1212/img/deals/gorgeous-bag-shoes.jpg")
       .col-sm-3.col-xs-6.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/smart-mom-baby.jpg")
+        img(src="/1212/img/deals/smart-mom-baby.jpg")
       .col-sm-3.col-xs-6.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/blisful-beauty.jpg")
+        img(src="/1212/img/deals/blisful-beauty.jpg")
       .col-sm-3.col-xs-6.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/stylish-muslim.jpg")
+        img(src="/1212/img/deals/stylish-muslim.jpg")
       .clearfix
 
     .content
       .col-sm-6.col-xs-12.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/powerfull-deals.jpg")
+        img(src="/1212/img/deals/powerfull-deals.jpg")
       .col-sm-6.col-xs-12.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/serba-serbi-deals.jpg")
+        img(src="/1212/img/deals/serba-serbi-deals.jpg")
       .clearfix
 
     .content
       .col-sm-3.col-xs-6.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/handsome-deals.jpg")
+        img(src="/1212/img/deals/handsome-deals.jpg")
       .col-sm-3.col-xs-6.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/comfy-deals.jpg")
+        img(src="/1212/img/deals/comfy-deals.jpg")
       .col-sm-3.col-xs-6.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/serba-serbi-deals-small.jpg")
+        img(src="/1212/img/deals/serba-serbi-deals-small.jpg")
       .col-sm-3.col-xs-6.deals-item
-        img(src="https://shopee1212.herokuapp.com/img/deals/yummy-deals.jpg")
+        img(src="/1212/img/deals/yummy-deals.jpg")
       .clearfix
