--- a/static/jade/section/shipping.jade
+++ b/static/jade/section/shipping.jade
@@ -3,5 +3,5 @@
     h3.subtitle.text-center EVERYTHING IN ONE CLICK!
 
   .shipping-content
-    img.desktop(src="https://shopee1212.herokuapp.com/img/bg-shipping.png")
-    img.mobile(src="https://shopee1212.herokuapp.com/img/bg-shipping-mobile.png")
+    img.desktop(src="/1212/img/bg-shipping.png")
+    img.mobile(src="/1212/img/bg-shipping-mobile.png")
