--- a/static/jade/section/testimony.jade
+++ b/static/jade/section/testimony.jade
@@ -7,7 +7,7 @@
       //- ul.slides
       //-   li
       //-     .content-testimony
-      //-       img(src='../img/twitter-dummy/1.png')
+      //-       img(src='../1212/img/twitter-dummy/1.png')
 
       //-       blockquote
       //-         p.tweet Can’t wait to buy stuffs from @ShopeeID on 12.12 #shopee1212
@@ -17,7 +17,7 @@
     #carousel.flexslider
       ul.slides
         //- li
-        //-   img(src='../img/twitter-dummy/1.png')
+        //-   img(src='../1212/img/twitter-dummy/1.png')
 
     script#testimony-slider-list-template(type='text/html').
       <ul class="slides">{{#tweets}}<li><div class="content-testimony"><a href="{{tweet_link}}" target="_blank"><img src="{{avatar}}"></a><blockquote><p class="tweet">@{{screenname}} {{body}}</a></p><span class="text-small">{{date | date}}</span></blockquote><div class="clearfix"></div></div></li>{{/tweets}}</ul>
