--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -6,39 +6,39 @@
       .cd-timeline-block
         .get-your-best-deal
         .cd-timeline-content.selebriti-comment
-          img.md-trigger(src="https://shopee1212.herokuapp.com/img/timeline/timeline-1.png", data-modal="modal-1")
+          img.md-trigger(src="/1212/img/timeline/timeline-1.png", data-modal="modal-1")
 
       .cd-timeline-block
         .cd-timeline-content.follow-comment
-          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-2.png");
+          img(src="/1212/img/timeline/timeline-2.png");
 
       .cd-timeline-block
         .cd-timeline-content.daily-checkin
-          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-3.png");
+          img(src="/1212/img/timeline/timeline-3.png");
 
       .cd-timeline-block
         .cd-timeline-content.pyramid-discount
-          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-4.png");
+          img(src="/1212/img/timeline/timeline-4.png");
 
       .cd-timeline-block
         .cd-timeline-content.road-to
-          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-5.png");
+          img(src="/1212/img/timeline/timeline-5.png");
 
       .cd-timeline-block
         .cd-timeline-content.lelang-barang-artis
-          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-6.png");
+          img(src="/1212/img/timeline/timeline-6.png");
 
       .cd-timeline-block
         .cd-timeline-content.the-big-day
-          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-7.png");
+          img(src="/1212/img/timeline/timeline-7.png");
 
       .cd-timeline-block
         .cd-timeline-content.top-speder-competition
-          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-8.png");
+          img(src="/1212/img/timeline/timeline-8.png");
 
       .cd-timeline-block
         .cd-timeline-content.showoff1212
-          img(src="https://shopee1212.herokuapp.com/img/timeline/timeline-9.png");
+          img(src="/1212/img/timeline/timeline-9.png");
 
     #modal-1.md-modal.md-effect-1
       .md-content
