--- a/static/less/web/home.less
+++ b/static/less/web/home.less
@@ -103,7 +103,7 @@
 
 .share-and-win {
   // min-height: 768px;
-  background: #F4F4F4 url(../img/share-and-win-bg2.jpg) no-repeat top center;
+  background: #f1592b;
   background-size: cover;
   padding-top: 50px;
   padding-bottom: 50px;
