--- a/static/jade/include/foot.jade
+++ b/static/jade/include/foot.jade
@@ -1,7 +1,7 @@
-script(src='js/libs/jquery.min.js')
-script(src='js/bootstrap.js')
-script(src='js/plugins.js')
-script(src='js/shopee-1212.js')
+script(src='/1212/js/libs/jquery.min.js')
+script(src='/1212/js/bootstrap.js')
+script(src='/1212/js/plugins.js')
+script(src='/1212/js/shopee-1212.js')
 
 script.
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
