--- a/static/jade/include/head.jade
+++ b/static/jade/include/head.jade
@@ -21,9 +21,9 @@ link(href='//fonts.googleapis.com/css?family=Roboto:100,300,700', rel='styleshee
 title Shopee: Jual Beli di Ponsel Anda
 
 // Bootstrap core CSS
-link(href='css/bootstrap.css', rel='stylesheet')
-link(href='css/shopee-1212.css', rel='stylesheet')
-script(src='js/libs/modernizr.custom.js')
+link(href='/1212/css/bootstrap.css', rel='stylesheet')
+link(href='/1212/css/shopee-1212.css', rel='stylesheet')
+script(src='/1212/js/libs/modernizr.custom.js')
 // HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries
 //if lt IE 9
   script(src='https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js')
