--- a/static/jade/include/mixin.jade
+++ b/static/jade/include/mixin.jade
@@ -15,7 +15,7 @@ mixin headerActive(current)
 
     .mobile-menu-trigger
       a(href="#")
-        img(src="https://shopee1212.herokuapp.com/img/humberger-icon.png")
+        img(src="/1212/img/humberger-icon.png")
         span MENU
 
     .container.main-navigation
