add popup modal

--- a/static/jade/section/share-and-win.jade
+++ b/static/jade/section/share-and-win.jade
@@ -16,11 +16,11 @@
       // Begin MailChimp Signup Form
       link(href='//cdn-images.mailchimp.com/embedcode/slim-081711.css', rel='stylesheet', type='text/css')
       #mc_embed_signup
-        form#mc-embedded-subscribe-form.validate(action='//karejo.us11.list-manage.com/subscribe/post?u=f0f6e7b09607099b2b5c9b550&id=0ed205dd7b', method='post', name='mc-embedded-subscribe-form', target='_blank', novalidate='')
+        form#mc-embedded-subscribe-form.validate(action='//shopee.us12.list-manage.com/subscribe/post?u=fbd937291f586820b7d740428&id=b1598d2ea0', method='post', name='mc-embedded-subscribe-form', target='_blank', novalidate='')
           #mc_embed_signup_scroll
             // real people should not fill this in and expect good things - do not remove this or risk form bot signups
             div(style='position: absolute; left: -5000px;', aria-hidden='true')
-              input(type='text', name='b_f0f6e7b09607099b2b5c9b550_0ed205dd7b', tabindex='-1', value='')
+              input(type='text', name='b_fbd937291f586820b7d740428_b1598d2ea0', tabindex='-1', value='')
             input#mce-EMAIL.email(type='email', value='', name='EMAIL', placeholder='Your email here', required='')
-            input#mc-embedded-subscribe.button(type='submit', value='SUMMIT', name='subscribe')
+            input#mc-embedded-subscribe.button(type='submit', value='SUBMIT', name='subscribe')
             .clearfix
