--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -3,42 +3,33 @@
 
   .container
     #cd-timeline
-      .cd-timeline-block
-        .get-your-best-deal
-        .cd-timeline-content.selebriti-comment
-          img.md-trigger(src="/1212/img/timeline/timeline-1.png", data-modal="modal-1")
+      .get-your-best-deal
+      .cd-timeline-content.selebriti-comment
+        img.md-trigger(src="/1212/img/timeline/timeline-1.png", data-modal="modal-1")
 
-      .cd-timeline-block
-        .cd-timeline-content.follow-comment
-          img(src="/1212/img/timeline/timeline-2.png");
+      .cd-timeline-content.follow-comment
+        img.md-trigger(src="/1212/img/timeline/timeline-2.png", data-modal="modal-2")
 
-      .cd-timeline-block
-        .cd-timeline-content.daily-checkin
-          img(src="/1212/img/timeline/timeline-3.png");
+      .cd-timeline-content.daily-checkin
+        img.md-trigger(src="/1212/img/timeline/timeline-3.png", data-modal="modal-3")
 
-      .cd-timeline-block
-        .cd-timeline-content.pyramid-discount
-          img(src="/1212/img/timeline/timeline-4.png");
+      .cd-timeline-content.pyramid-discount
+        img.md-trigger(src="/1212/img/timeline/timeline-4.png", data-modal="modal-4")
 
-      .cd-timeline-block
-        .cd-timeline-content.road-to
-          img(src="/1212/img/timeline/timeline-5.png");
+      .cd-timeline-content.road-to
+        img(src="/1212/img/timeline/timeline-5.png")
 
-      .cd-timeline-block
-        .cd-timeline-content.lelang-barang-artis
-          img(src="/1212/img/timeline/timeline-6.png");
+      .cd-timeline-content.lelang-barang-artis
+        img.md-trigger(src="/1212/img/timeline/timeline-6.png", data-modal="modal-6")
 
-      .cd-timeline-block
-        .cd-timeline-content.the-big-day
-          img(src="/1212/img/timeline/timeline-7.png");
+      .cd-timeline-content.the-big-day
+        img(src="/1212/img/timeline/timeline-7.png")
 
-      .cd-timeline-block
-        .cd-timeline-content.top-speder-competition
-          img(src="/1212/img/timeline/timeline-8.png");
+      .cd-timeline-content.top-speder-competition
+        img.md-trigger(src="/1212/img/timeline/timeline-8.png", data-modal="modal-8")
 
-      .cd-timeline-block
-        .cd-timeline-content.showoff1212
-          img(src="/1212/img/timeline/timeline-9.png");
+      .cd-timeline-content.showoff1212
+        img.md-trigger(src="/1212/img/timeline/timeline-9.png", data-modal="modal-9")
 
     #modal-1.md-modal.md-effect-1
       .md-content
@@ -46,9 +37,123 @@
         div
           p Caranya:
           ul
-            li a. Cek daftar penjual selebriti yang berpartisipasi.
-            li b.Setiap harinya penjual selebriti akan menampilkan 1 buah gambar melalui toko mereka dengan topik pertanyaan: "Apa arti belanja online bagi kamu?"
-            li c. Berikan jawaban sekreatif mungkin pada kolom komentar.
-            li d. Shopee akan mengumumkan 1 pemenang dari setiap toko selebriti pada tgl 12 Desember 2015.
-            li e. Tiap pemenang berhak mendapatkan hadiah kejutan yang akan diinformasikan melalui fitur chat di Shopee, langsung oleh penjual selebriti yang berpartisipasi.
-          button.md-close Close!
+            li Cek daftar penjual selebriti yang berpartisipasi.
+            li Setiap harinya penjual selebriti akan menampilkan 1 buah gambar melalui toko mereka dengan topik pertanyaan: "Apa arti belanja online bagi kamu?"
+            li Berikan jawaban sekreatif mungkin pada kolom komentar.
+            li Shopee akan mengumumkan 1 pemenang dari setiap toko selebriti pada tgl 12 Desember 2015.
+            li Tiap pemenang berhak mendapatkan hadiah kejutan yang akan diinformasikan melalui fitur chat di Shopee, langsung oleh penjual selebriti yang berpartisipasi.
+        span.md-close
+
+    #modal-2.md-modal.md-effect-1
+      .md-content
+        h3 FOLLOW, COMMENT, &amp; WIN!
+        div
+          p Caranya:
+          ul
+            li Cek daftar penjual yang berpartisipasi.
+            li Follow penjual &amp; berikan komentar pada produk apapun yang disukai.
+            li 12 Pemenang beruntung dari setiap toko, akan dipilh dan diumumkan tgl 12 Desember 2015. Para pemenang akan mendapatkan voucher belanja 10% untuk toko bersangkutan.
+
+          p Ketentuan:
+          ul
+            li Masa follow &amp; comment adalah 1 -11 Desember 2015.
+            li Masa berlaku Voucher, khusus untuk tanggal 12 Desember 2015.
+            li Voucher berlaku untuk toko bersangkutan.
+            li Voucher dapat digunakan tanpa min. pembelian.
+            li Voucher dapat digunakan dengan maks.diskon Rp50,000.
+            li Voucher tidak dapat digunakan untuk produk yang telah didiskon.
+            li Pengumuman pemenang &amp; kode voucher akan diberikan melalui SMS dari Shopee.
+        span.md-close
+
+    #modal-3.md-modal.md-effect-1
+      .md-content
+        h3 Daily Check-in
+        div
+          p Caranya:
+          ul
+            li
+              | Follow toko&nbsp;
+              a(href="https://twitter.com/ShopeeID", target="_blannk") @ShopeeID
+              |  di aplikasi Shopee.
+            li Cek toko @ShopeeID setiap hari, temukan post "Daily Check-in" selama 7 – 11 Desember 2015.
+            li Berikan komentar "Check-in" untuk setiap gambar yang di-post, setiap harinya.
+            li Shopee akan mengumumkan 300 pemenang pada tgl 12 Desember 2015.
+            li 300 orang beruntung yang melakukan "check-in" setiap hari tsb, berhak atas Voucher Belanja Rp50,000.
+
+          p Ketentuan:
+          ul
+            li Partisipan yang baru memulai pada hari kedua atau melewatkan satu hari atau lebih tanpa memberikan komentar "Check-in" akan dinyatakan gugur meskipun memulai dari awal.
+            li Voucher dapat digunakan untuk berbelanja di Shopee tgl 12 Desember 2015
+            li Vouhcher dapat digunakan untuk produk apapun, kecuali egori: Voucher
+            li Voucher dapat digunakan untuk pembelian min.Rp150,000 saja
+        span.md-close
+
+    #modal-4.md-modal.md-effect-1
+      .md-content
+        h3 Pyramid Discount (start 10pm)
+        div
+          p Caranya:
+          ul
+            li
+              | Follow dan kunjungi toko&nbsp;
+              a(href="https://twitter.com/ShopeeID", target="_blannk") @ShopeeID
+              |  di aplikasi Shopee.
+            li Temukan berbagai produk diskon s/d 90%, yang akan dibuka tgl 10 Desember 2015, tepat pk 22:00
+            li Stok &amp; waktu terbatas
+
+          p Ketentuan:
+          ul
+            li 1 orang hayna berhak membeli 1 jenis produk
+            li Pemesanan atas produk sejenis namun berbeda harga akan tetap dibatalkan
+        span.md-close
+
+    #modal-6.md-modal.md-effect-1
+      .md-content
+        h3 Lelang Barang Artis (8-9pm)
+        div
+          p Caranya:
+          ul
+            li
+              | Follow dan kunjungi toko&nbsp;
+              a(href="https://twitter.com/ShopeeID", target="_blannk") @ShopeeID
+              |  di aplikasi Shopee.
+            li Temukan post barang pre-loved dari Selebriti favorit.
+            li Lakukan penawaran dengan menyebutkan nominal harga yang diinginkan di bagian komentar
+            li Dalam waktu 1 jam, Shopee akan memilih 1 pemenang yang memberikan tawaran tertinggi
+
+          p Ketentuan:
+          ul
+            li Penawaran harus merupakan kelipatan Rp10,000
+            li Penawaran baru harus lebih tinggi dari penawaran terakhir
+        span.md-close
+
+    #modal-8.md-modal.md-effect-1
+      .md-content
+        h3 Top Spender Competition
+        div
+          p Caranya:
+          ul
+            li Belanja sebanyak-banyaknya di Shopee pada tanggal 12 Desember 2015
+            li Pembeli dengan transaksi tertinggi akan mendapatkan paket berlibur ke Jepang
+            li Batas pelunasan hingga 15 Desember 2015
+            li Pengguna yang melakukan pembayaran langsung di tanggal 12 Desember 2015 akan lebih diprioritaskan
+            li Shopee akan mengumumkan 1 pemenang pada 16 Desember 2015
+
+          p Informasi hadiah:
+          div Enjoy your holiday in Tokyo by visiting Disneyland or Disneysea, Mt Fuji & Gotemba, we will also bring you to see the beautiful of Tokyo with Tokyo Full Day Tour. <br /> Tour Duration : 5 hari 4 malam<br />Total Pax : 2 orang<br />Category : Leisure<br />Flight : Termasuk<br />Departure : 01 Nov 2015 - 31 Mar 2016
+        span.md-close
+
+    #modal-9.md-modal.md-effect-1
+      .md-content
+        h3 Top Spender Competition
+        div
+          p Caranya:
+          ul
+            li Beli produk apapun melalui aplikasi Shopee pada tanggal 12 Desember 2015
+            li Share foto produk tersebut pada tanggal 12 Desember 2015 ke Instagram dan Twitter (bisa langsung dilakukan dari aplikasi Shopee)
+            li Mention @ShopeeID (Twitter) atau @Shopee_ID (Instagram) sambil sertakan hashtag #ShowOff1212 dan #Shopee1212
+            li Shopee akan mengumumkan 1 pemenang dari Instagram dan 1 pemenang dari Twitter pada 16 Desember 2015
+            li Tiap pemenang akan mendapatkan hadiah Xiaomi Yi Camera
+        span.md-close
+
+.md-overlay
