fixing form submit email for mobile and fixingg poopu and some typo

--- a/static/jade/section/artist-profile.jade
+++ b/static/jade/section/artist-profile.jade
@@ -1,63 +1,63 @@
 #tokoSeleb.container.section.artist-profile-block.text-center
-  h3.subtitle.text-center GET THEIR FAVORITE STUFFS!
+  h3.subtitle.text-center MILIKI BARANG PRE-LOVED SELEBRITI FAVORITMU
 
   .artis-item
     img(src="/1212/img/artis/giring.png")
     h5 Giring Nidji
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/raisa.png")
     h5 Raisa
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/tulus.png")
     h5 Tulus
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/eva-celia.png")
     h5 Eva Celia
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/lala-karmela.png")
     h5 Lala Karmela
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/ello.png")
     h5 Ello
-    span Penyanyi
+    span Toko Dibuka 12.12
 
 
   .artis-item
     img(src="/1212/img/artis/ayushita.png")
     h5 ayushita
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/maliq.png")
     h5 MALIQ & D’ESSENTIALS
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/endha-rhesa.png")
     h5 Endah N Resha
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/saykoji.png")
     h5 Saykoji
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/teddy-adithya.png")
     h5 Teddy Adithya
-    span Penyanyi
+    span Toko Dibuka 12.12
 
   .artis-item
     img(src="/1212/img/artis/hive.png")
     h5 Midnight Quickie
-    span Penyanyi
+    span Toko Dibuka 12.12
