--- a/static/jade/section/share-and-win.jade
+++ b/static/jade/section/share-and-win.jade
@@ -1,6 +1,8 @@
 #shareAndWin.share-and-win.section
   .container
-    h3.subtitle.text-center SHARE &amp; STAND A CHANCE <br />TO WIN IPHONE 6
+    h3.subtitle.text-center SHARE &amp; WIN
+
+    p.text-medium Bagikan informasi GREAT 12.12 SALE ke temanmu dan raih kesempatan memenangkan iphone 6
 
     .social-media.text-center
       a.icon.facebook(href="", title="Facebook")
