--- a/static/jade/section/testimony.jade
+++ b/static/jade/section/testimony.jade
@@ -3,6 +3,11 @@
 
     h3.subtitle.text-center #SHOPEE1212
 
+    p.subtitle-text.text-center
+      | Join the conversation! Tambahkan&nbsp;
+      a(href="https://twitter.com/hashtag/Shopee1212", target="_blank") #Shopee1212
+      |  di tweet dan instagram post kami
+
     #testimony-slider.flexslider
       //- ul.slides
       //-   li
