--- a/static/less/web/testimony.less
+++ b/static/less/web/testimony.less
@@ -1,7 +1,19 @@
 .testimony-section {
 
   .subtitle {
-    margin-bottom: 100px;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+
+  .subtitle-text {
+    font-size: 14px;
+    color: #424242;
+    margin-bottom: 70px;
+    padding: 0 10px;
+
+    @media (max-width: @screen-xs) {
+      margin-bottom: 30px;
+    }
   }
 
   #carousel,
@@ -11,7 +23,7 @@
   }
 
   #testimony-slider {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
 
     .content-testimony {
       width: 600px;
