make popup for mobile more usabable

--- a/static/jade/section/timeline.jade
+++ b/static/jade/section/timeline.jade
@@ -90,7 +90,9 @@
 
     #modal-4.md-modal.md-effect-1
       .md-content
-        h3 Pyramid Discount (start 10pm)
+        h3
+          | Pyramid Discount
+          small (start 10pm)
         div
           p Caranya:
           ul
@@ -109,7 +111,9 @@
 
     #modal-6.md-modal.md-effect-1
       .md-content
-        h3 Lelang Barang Artis (8-9pm)
+        h3
+          | Lelang Barang Artis
+          small (8-9pm)
         div
           p Caranya:
           ul
