--- a/static/less/web/modal.less
+++ b/static/less/web/modal.less
@@ -35,6 +35,14 @@ perspective effects (not including the modals and the overlay).
   -moz-transform: translateX(-50%) translateY(-50%);
   -ms-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
+
+  @media (max-width: @screen-xs) {
+    &.md-show {
+      max-height: 100%;
+      min-height: 100%;
+      background: #f1592b;
+    }
+  }
 }
 
 .md-show {
@@ -69,6 +77,12 @@ perspective effects (not including the modals and the overlay).
   border-radius: 3px;
   margin: 0 auto;
 
+  @media (max-width: @screen-xs) {
+    max-height: 100%;
+    min-height: 100%;
+    overflow-y: auto;
+  }
+
   ul {
     list-style: 0;
   }
@@ -96,8 +110,16 @@ perspective effects (not including the modals and the overlay).
     border-width: 1px 1px 0 1px;
     font-weight: 600;
 
+    small {
+      font-size: 16px;
+    }
+
     @media (max-width: @screen-xs) {
-      font-size: 1.8em;
+      font-size: 1.4em;
+
+      small {
+        font-size: 13px;
+      }
     }
   }
 }
