fixing image for timeline

--- a/static/less/web/timeline.less
+++ b/static/less/web/timeline.less
@@ -76,11 +76,15 @@
   top: 30px;
 
   @media (max-width: @screen-xs) {
-    position: relative;
-    top: auto;
     right: auto;
-    width: 100%;
-    left: 0;
+    top: auto;
+    position: relative;
+    height: 146px;
+    width: 300px;
+    left: 50%;
+    margin:25px 0 15px -140px;
+
+    background: url(../img/timeline/timeline-0-mobile.png) no-repeat 0 0;
   }
 }
 
